--- a/ui/inspectors/inspector.reel/_inspector.css
+++ b/ui/inspectors/inspector.reel/_inspector.css
@@ -36,6 +36,25 @@
     display: block;
 }
 
+/* Global error message */
+
+.Inspector-error {
+    display: none;
+    position: relative;
+    width: 100%;
+    background: #E0003A;
+    padding: .5em;
+    padding-top: .2em;
+    font-weight: 300;
+    color: #fff;
+    border-bottom-left-radius:  4px;
+    border-bottom-right-radius: 4px;
+}
+
+.Inspector.has-error .Inspector-error {
+    display: block;
+}
+
 /* Locked Panel */
 
 .Inspector-locked {
