--- a/ui/dashboard/widgets/widget.reel/_widget.css
+++ b/ui/dashboard/widgets/widget.reel/_widget.css
@@ -19,6 +19,18 @@
     @nest .drawer-is-open &:hover {
         box-shadow: 0px 0px 2px 2px rgba(43,156,216,1);
     }
+
+    &.small {
+        background: green;
+    }
+
+    &.medium {
+        background: orange;
+    }
+
+    &.large {
+        background: purple;
+    }
 }
 
 .Widget-header {
