Add introspective validation to inspectors

--- a/ui/controls/field-treeview.reel/_field-treeview.css
+++ b/ui/controls/field-treeview.reel/_field-treeview.css
@@ -27,6 +27,15 @@
     }
 }
 
+.FieldTreeview-pathButton.montage--disabled {
+    opacity: .5;
+}
+
+.FieldTreeview-pathButton:hover {
+    color: #DFE4E4;
+    background: #2F3233;
+}
+
 .FieldTreeview-icon {
     display: flex;
     align-items: center;
