adds disabled setting to treeview and field-treeview, switches target button to blue-shark and edits styles

--- a/ui/controls/tree-view.reel/_tree-view.css
+++ b/ui/controls/tree-view.reel/_tree-view.css
@@ -2,6 +2,12 @@
     border: 1px solid #000;
     border-radius: 4px;
     background-color: #242628;
+    transition: opacity .25s ease-in-out;
+
+    &.is-disabled {
+        opacity: .5;
+        pointer-events: none;
+    }
 }
 
 .TreeView-header {
