--- a/ui/dashboard/widgets/widget-wrapper.reel/_widget-wrapper.css
+++ b/ui/dashboard/widgets/widget-wrapper.reel/_widget-wrapper.css
@@ -40,6 +40,10 @@
             max-width: calc(100% - 1em);
         }
     }
+
+    @nest .Sideboard & {
+        width: 100%;
+    }
 }
 
 .WidgetWrapper-removeButton {
@@ -71,7 +75,15 @@
 
 .Widget-sizeSelector {
     position: absolute;
-    top: .5rem;
-    right: 2rem;
+    display: none;
+    bottom: .5rem;
+    left: .5rem;
     font-size: .75em;
+    box-shadow: 0 0 4px 0px rgba(0,0,0,1);
+    z-index: 1;
+
+    @nest .Main.drawer-is-open .Dashboard & {
+        display: block;
+    }
+
 }
