Use Promise for system action confirmation

--- a/ui/main-sidebar/main-sidebar.reel/_main-sidebar.css
+++ b/ui/main-sidebar/main-sidebar.reel/_main-sidebar.css
@@ -139,3 +139,19 @@
         cursor: pointer;
     }
 }
+
+.MainSidebar .MainSidebar-confirmation {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    background: inherit;
+
+    & button {
+        min-width: 64px;
+    }
+}
+
+.MainSidebar.has-confirmation .MainSidebar-confirmation {
+    display: block;
+}
+
