--- a/ui/main-sidebar/main-sidebar.reel/_main-sidebar.css
+++ b/ui/main-sidebar/main-sidebar.reel/_main-sidebar.css
@@ -56,7 +56,6 @@
 
 .MainSidebar-globalActions {
     position: relative;
-    background: #0F1213;
 
     & > * {
         min-width: 0;
@@ -69,6 +68,9 @@
 }
 
 .MainSidebar-globalActions-button {
+    position: relative;
+    z-index: 1;
+    background: #0F1213;
     display: flex;
     padding: .5em;
     cursor: pointer;
@@ -95,8 +97,7 @@
     bottom: 100%;
     list-style: none;
     margin: 0;
-    border-top-right-radius: 4px;
-    border-top-left-radius:  4px;
+    background: #242628;
 
     &:active {
         display: block;
@@ -116,11 +117,12 @@
     }
 
     & li {
-        background: #16171A;
-        box-shadow: 0 2px 2px 0 rgba(0,0,0,.2);
+        /* background: #16171A; */
+        /* box-shadow: 0 2px 2px 0 rgba(0,0,0,.2); */
+        transition: background-color .15s ease-in-out;
 
         &:hover {
-            background: #242628;
+            background: color(#242628 l(19%));
         }
     }
 
@@ -137,14 +139,16 @@
 }
 
 .MainSidebar-confirmation {
-    display: none;
     position: absolute;
     bottom: 0;
-    background: inherit;
+    background: #0F1213;
     padding: .5rem;
+    z-index: 1;
+    transform: translateY(100%);
+    transition: transform .35s ease-in-out;
 
     @nest .MainSidebar.has-confirmation & {
-        display: block;
+        transform: translateY(0%);
     }
 
     & .MainSidebar-confirmation-message {
