Migrate network section to new UI layout

--- a/ui/main.reel/_main.css
+++ b/ui/main.reel/_main.css
@@ -26,7 +26,8 @@
         );
 }
 
-.Main-substitution {
+.Main-substitution,
+.Main-cascadingListWrapper {
     position: relative;
     display: flex;
     flex-direction: column;
