adds subtitle option to foldable-section

--- a/ui/controls/foldable-section.reel/_foldable-section.css
+++ b/ui/controls/foldable-section.reel/_foldable-section.css
@@ -18,7 +18,7 @@ title
 .FoldableSection .InspectorSectionTitle {
     margin-top:     0;
     margin-bottom:  0;
-    padding: 0 1rem;
+    /* padding: 0 1rem; */
 }
 
 /* Title / Icon button container */
@@ -63,6 +63,8 @@ title
         color: currentColor;
     }
 }
+
+.FoldableSection-expand-titles { padding: .5em 1em; }
 
 
 .FoldableSection-expand .InspectorSectionTitle-text:after {
