--- a/ui/inspectors/calendar.reel/_calendar.css
+++ b/ui/inspectors/calendar.reel/_calendar.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     padding: 1em;
+    padding-bottom: 0;
 }
 
 .Calendar-events {
@@ -28,7 +29,7 @@
 
 .Calendar-eventsList {
     flex: 1;
-    padding-top: 1em;
+    /* padding-top: 1em; */
     position: relative;
     min-height: 10em;
 }
