adjust scrollview on calendar list and adds hidden empty state WIP

--- a/ui/inspectors/calendar.reel/calendar-list.reel/_calendar-list.css
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/_calendar-list.css
@@ -2,9 +2,21 @@
     position: relative;
     display: flex;
     flex-direction: column;
+
+    & .Scrollview-transform {
+        flex: none;
+    }
 }
 
 .CalendarList-days {
     padding-top: 1em;
+}
+
+.CalendarList-emptySate {
+    display: none;
+
+    @nest .has-no-events & {
+        display: block;
+    }
 }
 
