--- a/ui/inspectors/calendar.reel/task-category.reel/_task-category.css
+++ b/ui/inspectors/calendar.reel/task-category.reel/_task-category.css
@@ -4,7 +4,7 @@
     user-select: none;
     -webkit-user-select: none;
     cursor: grab;
-    min-width: 4.25em;
+    min-width: 3.5em;
     text-shadow: 0 1px 1px rgba(0,0,0,.2);
     border: 1px solid currentColor;
     border-radius: 2px;
@@ -26,6 +26,7 @@
     text-align: center;
     line-height: 1.25rem;
     font-weight: bolder;
+    font-weight: 200;
     color: #fff;
 }
 
