--- a/ui/drawer.reel/_drawer.css
+++ b/ui/drawer.reel/_drawer.css
@@ -122,3 +122,13 @@
         margin-right: 1em;
     }
 }
+
+/* Drawer Layout Button */
+
+.Drawer-layoutButton {
+    display: none;
+
+    @nest .layout-has-changed & {
+        display: inline-block;
+    }
+}
