--- a/ui/controls/section.reel/section-root.reel/section-root.css
+++ b/ui/controls/section.reel/section-root.reel/section-root.css
@@ -1,3 +1,1 @@
-.SectionRoot {
-
-}
+.SectionRoot,.SectionRoot-entries{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.SectionRoot-entries{min-height:16.5em}.SectionRoot-overview{-ms-flex-direction:column;flex-direction:column;min-height:15em}.SectionRoot-overview,.SectionRoot-overview>:first-child{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal}.SectionRoot-overview>:first-child{-webkit-box-flex:1;-ms-flex:1;flex:1;-ms-flex-direction:column;flex-direction:column}.SectionRoot-overview .Scrollview-transform{display:block}.SectionRoot-title{color:#fff;padding:.5em 1em;background:purple;font-weight:400;margin:0}
