--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -33,16 +33,17 @@
     background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.15));
     box-shadow: inset 0 1px 0 rgba(255,255,255,.2);
     transition: background-color .25s;
+
+    &:hover {
+        background-color: #0E722B;
+    }
+
+    & svg {
+        width:  1.4em;
+        height: 1.4em;
+    }
 }
 
-.Viewer-createButton:hover {
-    background-color: #0E722B;
-}
-
-.Viewer-createButton svg {
-    width:  1.4em;
-    height: 100%;
-}
 
 .Viewer-createButton-arrow,
 .Viewer-createButton-plus {
