fixes scrolling bug on dashboard Ticket: #17842

--- a/ui/dashboard/widget-dropzone.reel/_widget-dropzone.css
+++ b/ui/dashboard/widget-dropzone.reel/_widget-dropzone.css
@@ -1,6 +1,10 @@
 .WidgetDropzone {
     flex: 1;
     display: flex;
+
+    & > .Scrollview .Scrollview-transform {
+        display: block;
+    }
 }
 
 .WidgetDropzone-wrapper {
