adds consistent icon to dashbaord widget settings, edits network traffic title Ticket: #17646

--- a/ui/dashboard/widgets/widget.reel/_widget.css
+++ b/ui/dashboard/widgets/widget.reel/_widget.css
@@ -27,7 +27,7 @@
     padding: .5rem;
     line-height: 1em;
     height: 2.5em;
-    background: #404040;
+    background-color: #404040;
     color: #E0E5E5;
 
     & svg {
@@ -35,6 +35,10 @@
         height: 1.4em;
         margin-right: .5em;
         color: inherit;
+    }
+
+    @nest .flip & {
+        background-color: #0C5688;
     }
 }
 
