--- a/ui/controls/tree-view.reel/_tree-view.css
+++ b/ui/controls/tree-view.reel/_tree-view.css
@@ -3,6 +3,7 @@
     border-radius: 4px;
     background-color: #242628;
     transition: opacity .25s ease-in-out;
+    overflow: hidden;
 
     &.is-disabled {
         opacity: .5;
@@ -11,59 +12,49 @@
 }
 
 .TreeView-header {
+    position: relative;
     display: flex;
     align-items: center;
     border-bottom: 1px solid #000;
-}
-
-.TreeView-backButton {
-    flex-shrink: 0;
-    height: 2em;
-    width:  2em;
-    padding: .5em;
-    cursor: pointer;
     background: #0F1213;
-    outline: none;
-    border-top-left-radius: 4px;
-}
-
-.TreeView-backButton:hover {
-    background: #16171A;
     color: #fff;
 }
 
-.TreeView-backButton[disabled='disabled'] {
-    opacity: .5;
-    cursor: not-allowed;
+.TreeView-backButton.Button {
+    flex-shrink: 0;
+    padding: 0 .5em !important;
+    min-width: 0;
 
-    &:hover {
-        color: currentColor;
+    &[disabled='disabled'] {
+        opacity: .3;
+        cursor: not-allowed;
+        background: none;
+
+        &:hover {
+            color: currentColor;
+        }
+    }
+
+    & svg {
+        transform: rotate(180deg);
+        margin-right: 0;
     }
 }
 
-.TreeView-backButton svg {
-    width:  100%;
-    height: 100%;
-    transform: rotate(180deg);
-    margin-top: -0.2em;
-    margin-left: -0.2em;
+/* current path */
+
+.TreeView .TreeView-currentNodeName {
+    display: inline-block;
+    position: absolute;
+    top:  calc(50% - 1px);
+    left: 50%;
+    line-height: 1em;
+    transform: translate(-50%, -50%);
+    vertical-align: middle;
+    font-weight: 400;
 }
 
-/* input path */
-
-.TreeView .TreeView-currentPath {
-    border-radius: 0;
-    border-top-right-radius: 4px;
-    border-color: transparent;
-    background: #2F3233;
-    height: 2em;
-}
-
-/*
-
-Body
-
-*/
+/* Body */
 
 .TreeView-body {
     overflow: hidden;
@@ -71,11 +62,7 @@ Body
     height: 10em;
 }
 
-/*
-
-Footer
-
-*/
+/* Footer */
 
 .TreeView-footer {
     display: flex;
