--- a/ui/controls/tree-view.reel/child-node.reel/_child-node.css
+++ b/ui/controls/tree-view.reel/child-node.reel/_child-node.css
@@ -1,23 +1,41 @@
 .ChildNode {
+    position: relative;
     display: flex;
-    align-items: center;
-    padding: .25em .5em;
     cursor: pointer;
-    border-bottom: 1px solid currentColor;
+    border-bottom: 1px solid rgba(0,0,0,.25);
+    transition: background-color .15s ease-in-out;
 }
 
-.ChildNode:hover {
-    background-color: rgba(255,255,255,.1);
+.ChildNode-openButton {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    padding: .25em 1.75em .25em .5em;
+
+    &:focus {
+        box-shadow: none;
+        outline: none;
+    }
+
+    &:hover { background-color: rgba(255,255,255,.025);}
+
+    & svg {
+        width: 100%;
+        height: 100%;
+    }
 }
 
-.ChildNode.selected {
-    background-color: #2B9CD8;
-    color: #FFF;
-}
+.ChildNode-checkbox.Checkbox {
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    top: 50%;
+    right: .5em;
+    margin-top: -.75em;
 
-.ChildNode svg {
-    width: 100%;
-    height: 100%;
+    & label:before {
+        margin-right: 0;
+    }
 }
 
 .ChildNode-name {
@@ -25,11 +43,23 @@
     line-height: 1em;
 }
 
+/* icons */
+
 .ChildNode-arrow,
-.ChildNode-typeIcon {
+.ChildNode-typeIcon,
+.ChildNode-homeIcon {
     width:  1.5em;
     height: 1.5em;
     padding: .15em;
+    padding-left:
+}
+
+.ChildNode-homeIcon {
+    margin-right: .5rem;
+
+    @nest .ChildNode.selected & svg {
+        stroke: red;
+    }
 }
 
 .ChildNode-typeIcon {
