--- a/ui/controls/tree-view.reel/current-node.reel/_current-node.css
+++ b/ui/controls/tree-view.reel/current-node.reel/_current-node.css
@@ -4,10 +4,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding-left: .5em;
 }
-
-/*.CurrentNode.isTransitioning { transition: transform .5s ease-in-out; }*/
 
 .CurrentNode.isBefore   { transform: translateX(-101%); }
 .CurrentNode.isAfter    { transform: translateX(101%) }
@@ -18,11 +15,7 @@
     min-height: 0;
 }
 
-/*
-
-parent node
-
-*/
+/* parent node */
 
 .CurrentNode-parentNode {
     display: flex;
@@ -49,10 +42,6 @@ parent node
 .childSelected .CurrentNode-parentNode { background-color: grey; }
 .childSelected .CurrentNode-parentNode:before { background-color: grey; }
 
-.CurrentNode-parentNode-name {
-    /*font-size: 1.2em;*/
-}
-
 .CurrentNode-parentNode-icon {
     width:  1.5em;
     height: 1.5em;
@@ -63,4 +52,31 @@ parent node
 .CurrentNode-parentNode-icon svg {
     width:  100%;
     height: 100%;
+}
+
+/* Empty State */
+
+.CurrentNode-emptyState {
+    display: none;
+    max-width: 20em;
+    background-color: rgba(255,255,255,.1);
+    align-self: center;
+    padding: 1em 2em;
+    text-align: center;
+    margin-top: 2em;
+    border-radius: 4px;
+
+    & span:first-child {
+        font-weight: 400;
+        color: #f0f0f0;
+        margin-bottom: 1rem;
+    }
+
+    & span:last-child {
+        margin-bottom: .25em;
+    }
+
+    @nest .CurrentNode.is-empty & {
+        display: block;
+    }
 }
