--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/_calendar-widget-day.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/_calendar-widget-day.css
@@ -22,17 +22,13 @@
     cursor: inherit;
 }
 
-.CalendarWidgetDay-date {
-    text-align: right;
-    margin-bottom: .25em;
-}
+.CalendarWidgetDay-date { text-align: right; }
 
 .CalendarWidgetDay-otherMonth .CalendarWidgetDay-date {
     color: transparent;
 }
 
 .CalendarWidgetDay-today {
-    z-index: 100;
     background: #2e3032;
     box-shadow: 0 0 8px 2px rgba(0,0,0,.2);
 }
@@ -62,8 +58,11 @@
 
     @nest .CalendarWidgetDay.show-more & {
         bottom: auto;
-        box-shadow: 0 2px 4px 4px rgba(0,0,0,.5);
-        border-bottom: 1px solid black;
+        box-shadow: 0 0 0 1px rgba(255,255,255,.2), 0 4px 10px 4px rgba(0,0,0,.9);
+        /* border-bottom: 1px solid black; */
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        background-color: #1e1f20;
     }
 }
 
@@ -78,6 +77,7 @@
     background: none;
     border: 1px solid transparent;
     box-shadow: none;
+    margin-top: .2rem;
 
     &:hover {
         border-color: #2089d3;
@@ -98,6 +98,6 @@
 
 .CalendarWidgetDay-task {
     display: none;
-    margin-bottom: .25rem;
+    margin-bottom: .1rem;
 }
 
