Aligns title on unixPermissions component

--- a/ui/controls/unixPermissions.reel/_unixPermissions.css
+++ b/ui/controls/unixPermissions.reel/_unixPermissions.css
@@ -2,6 +2,10 @@
     margin-bottom: 1em;
 }
 
+.Permissions-title.InspectorSectionTitle {
+    margin: 0 !important;
+}
+
 .Permissions-flags {
     text-align: center;
     width: 100%;
