--- a/ui/controls/tree-view.reel/child-node.reel/_child-node.css
+++ b/ui/controls/tree-view.reel/child-node.reel/_child-node.css
@@ -4,13 +4,18 @@
     cursor: pointer;
     border-bottom: 1px solid rgba(0,0,0,.25);
     transition: background-color .15s ease-in-out;
+
+    &.is-selected {
+        background-color: #2089d3;
+        color: #fff;
+    }
 }
 
 .ChildNode-openButton {
     display: flex;
     flex: 1;
     align-items: center;
-    padding: .25em 1.75em .25em .5em;
+    padding: .25em .5em .25em .5em;
 
     &:focus {
         box-shadow: none;
@@ -22,19 +27,6 @@
     & svg {
         width: 100%;
         height: 100%;
-    }
-}
-
-.ChildNode-checkbox.Checkbox {
-    position: absolute;
-    right: 0;
-    z-index: 1;
-    top: 50%;
-    right: .5em;
-    margin-top: -.75em;
-
-    & label:before {
-        margin-right: 0;
     }
 }
 
