--- a/ui/controls/tree-view.reel/child-node.reel/_child-node.css
+++ b/ui/controls/tree-view.reel/child-node.reel/_child-node.css
@@ -4,6 +4,7 @@
     cursor: pointer;
     border-bottom: 1px solid rgba(0,0,0,.25);
     transition: background-color .15s ease-in-out;
+    user-select: none;
 
     &.is-selected {
         background-color: #2089d3;
