rotates arrow when item is expanded

--- a/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/_interface-overview-item.css
+++ b/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/_interface-overview-item.css
@@ -25,6 +25,10 @@
         height: 1rem;
         width:  1rem;
     }
+
+    @nest .InterfaceOverviewItem.is-expanded & svg {
+        transform: rotate(180deg);
+    }
 }
 
 .InterfaceOverviewItem-name {
